--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div id="chamada">
       <br><br>
       <a href="https://api.whatsapp.com/send?phone=5564992976666&text=Gostaria de agendar um horario!">WhatsApp</a><br><br><br>
-      <a href="https://sites.appbarber.com.br/jeorgefreitasba-8tb6">Agende Agora mesmo!</a><br><br><br>
+      <a href="https://sites.appbarber.com.br/jeorgefreitasba-8tb6">Agende agora mesmo!</a><br><br><br>
       <a href="https://www.facebook.com/jeorgemiguelf">Facebook</a><br><br><br>
       <a href="https://www.instagram.com/jeorgefreitasbarbershop/">Instagram</a><br><br><br>
     
     <div class="logo">
 
-       <img src="../Barbearia/_imagens/JEORGELogo.png" display="block" margin-left= "auto" margin-right="auto">
+       <img src="../social/_imagens/JEORGELogo.png" display="block" margin-left= "auto" margin-right="auto">
       </div>
 
 
